--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pcre
-url = https://ftp.pcre.org/pub/pcre/pcre-8.44.tar.gz
+url = https://ftp.pcre.org/pub/pcre/pcre-8.45.tar.gz
 archives = 
 giturl = 
 domain = 
@@ -44,6 +44,8 @@ ccstats = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# enable source custom .bashrc
+custom_bashrc = false
 # dev package requires the extras to be installed
 dev_requires_extras = false
 # disable maintainer mode for autotools
