--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pcre
-url = https://ftp.pcre.org/pub/pcre/pcre-8.45.tar.gz
+url = https://cfhcable.dl.sourceforge.net/project/pcre/pcre/8.45/pcre-8.45.tar.bz2
 archives = 
 giturl = 
 domain = 
@@ -28,6 +28,8 @@ altflags_pgo = true
 altflags_pgo_32 = false
 # unset %build ld_as_needed variable
 asneeded = false
+# enable a simpler autogen macro
+autogen_simple = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = false
 # extend flags with '-std=gnu++98
